--- a/spring-shoppingmall/src/main/resources/templates/users/userslist.html
+++ b/spring-shoppingmall/src/main/resources/templates/users/userslist.html
@@ -13,17 +13,31 @@
 	<h1>회원목록</h1>
 	<div class="container">
 		<div>
-			<table>
+			<table class="table table-dark table-striped table-hover">
+
 				<thead>
 					<tr>
-						<th>#</th>
-						<th>이름</th>
+						<th scope="col">유저번호</th>
+						<th scope="col">이름</th>
+						<th scope="col">아이디</th>
+						<th scope="col">이메일</th>
+						<th scope="col">비밀번호</th>
+						<th scope="col">우편번호</th>
+						<th scope="col">주소</th>
+						<th scope="col">상세주소</th>
+						
 					</tr>
 				</thead>
 				<tbody>
 					<tr th:each="users : ${users}">
 						<td th:text="${users.usernum}"></td>
 						<td th:text="${users.username}"></td>
+						<td th:text="${users.userid}"></td>
+						<td th:text="${users.useremail}"></td>
+						<td th:text="${users.userpasswd}"></td>
+						<td th:text="${users.addr1}"></td>
+						<td th:text="${users.addr2}"></td>
+						<td th:text="${users.addr3}"></td>
 					</tr>
 				</tbody>
 			</table>
