--- a/spring-shoppingmall/src/main/resources/templates/products/productlist.html
+++ b/spring-shoppingmall/src/main/resources/templates/products/productlist.html
@@ -14,41 +14,20 @@
 </head>
 
 <body>
-	<h1>회원목록</h1>
+	<h1>상품목록</h1>
 	<div class="container">
 		<div>
-			<table class="table table-dark table-striped table-hover">
+			<div th:each="product : ${products}" class="card"
+				style="width: 10vw;">
+				<img src="#" class="card-img-top" alt="...">
+				<div class="card-body">
+					<p class="card-text">Some quick example text to build on the
+						card title and make up the bulk of the card's content.</p>
+				</div>
+			</div>
 
-				<thead>
-					<tr>
-						<th scope="col">유저번호</th>
-						<th scope="col">이름</th>
-						<th scope="col">아이디</th>
-						<th scope="col">이메일</th>
-						<th scope="col">비밀번호</th>
-						<th scope="col">우편번호</th>
-						<th scope="col">주소</th>
-						<th scope="col">상세주소</th>
-						<th scope="col">가입날짜</th>
-
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="users : ${users}">
-						<td th:text="${users.usernum}"></td>
-						<td th:text="${users.username}"></td>
-						<td th:text="${users.userid}"></td>
-						<td th:text="${users.useremail}"></td>
-						<td th:text="${users.userpasswd}"></td>
-						<td th:text="${users.addr1}"></td>
-						<td th:text="${users.addr2}"></td>
-						<td th:text="${users.addr3}"></td>
-						<td th:text="${users.usercreatedate}"></td>
-
-					</tr>
-				</tbody>
-			</table>
 		</div>
+	</div>
 </body>
 
 </html>
